# paresy

./: .gitignore
code/gpu_version/: CMakeLists.txt  gpu126.cu
code/gpu_version/modified_libraries/helpers/: cuda_helpers.cuh
